<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raghav.bankingApp.SplashScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/splash2"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/splash_title"
        android:textAllCaps="false"
        android:textColor="#F42516"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/designed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_dev1"
            android:textColor="#F31F0F"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_dev2"
            android:textColor="#F12213"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>
</RelativeLayout>