<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:text="@string/user_name"
            android:textColor="#DC7352"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/userphonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/rupee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rs."
                android:textColor="#0E0E0E"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="#101010"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rupeeslash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_symbol"
                android:textColor="#090909"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>