<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.raghav.bankingApp.User_Data">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cycle_add"
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/user" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cycle_add"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#DC7352"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userphonenumber"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#DC7352"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile_no"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#DC7352"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bank_account_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_id"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/account_no"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_no"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#DC7352"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ifsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bank_account_no"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/ifsc_code"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ifsc_code"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#DC7352"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/current_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ifsc"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/current_balance"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/rupee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rs1"
                    android:textColor="#DC7352"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DC7352"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rupeeslash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rs"
                    android:textColor="#DC7352"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/transfer_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/current_balance"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#070707"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/transfer_money"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>