<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name1"
                android:textColor="#DC7352"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:contentDescription="TODO"
                android:src="@drawable/arrow" />

            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name2"
                android:textColor="#DC7352"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Username"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/rupee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs2"
                android:textColor="#0B0B0B"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="#030304"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rupeeslash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" /-"
                android:textColor="#070707"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/transaction_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Amount"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:text="Transaction status"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>